--- a/app/index.html
+++ b/app/index.html
@@ -350,6 +350,7 @@
                         console.log(b.constructor === B.prototype.constructor) // true
                         console.log(b.constructor === c.constructor) // true
                         console.log(Object.prototype)
+                        console.log(A.__proto__ === Function.prototype) // true
                         console.log(A.prototype.__proto__ === Object.prototype) // true
                         // 子类的__proto__属性，表示构造函数的继承，总是指向父类
                         console.log(B.__proto__ === A) // true
@@ -360,6 +361,24 @@
                         console.log(B.prototype.__proto__ === A.prototype) // true
                         console.log(Object.getPrototypeOf(B) === A) // true
 
+                        // 特殊的继承
+
+                        class D extends null {
+
+                        }
+
+                        // true
+                        console.log(D.__proto__ === Function.prototype)
+                        // true
+                        console.log(D.prototype.__proto__ === undefined)
+                    }
+
+                    // Module的语法 是尽量的静态化，使得编译时就能确定模块的依赖关系，以及输入和输出的变量
+                    {
+                        // export 和 import 的操作此处略去
+                        export var firstName = 'Shan'
+                        export var lastName = 'houwang'
+                        export var year = '1958'
                     }
                 }
             }
